--- a/leya-automatic-tests/pom.xml
+++ b/leya-automatic-tests/pom.xml
@@ -41,7 +41,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <includes>
-                        <include>**/com/company/stepdefinitions/*.java</include> <!-- Include all test classes in the specified package -->
+                        <include>**/com/company/stepdefinitions/*.java</include>
                     </includes>
                 </configuration>
             </plugin>
